Fix dispay of quote to one on smaller screens and fix margin and font size to match design

--- a/main.css
+++ b/main.css
@@ -142,50 +142,53 @@ a {
 
 .article-quote {
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
+  grid-template-columns: repeat(9, 1fr);
   grid-template-rows: 2fr;
   gap: 10px;
+  margin-right: 1rem;
+  margin-left: 0.5rem;
 }
 
 .article-quote-img-1 {
   border-radius: 50%;
   width: 100%;
-  grid-column: 1 / span 1;
+  grid-column: 1 / span 2;
   grid-row: 1 / span 2;
 }
 
 .article-quote-img-2 {
   border-radius: 50%;
   width: 100%;
-  grid-column: 6 / span 1;
+  grid-column: 6 / span 2;
   grid-row: 1 / span 2;
 }
 
 .p-quote-1 {
   font-style: italic;
-  font-size: 0.3rem;
-  grid-column: 2 / span 4;
+  font-size: 0.5rem;
+  grid-column: 3 / span 7;
   grid-row: 1 / span 1;
   margin: 0;
 }
 
 .p-quote-2 {
   font-style: italic;
-  font-size: 0.3rem;
-  grid-column: 7 / span 4;
+  font-size: 0.5rem;
+  grid-column: 8 / span 7;
   grid-row: 1 / span 1;
   margin: 0;
 }
 
 .p-quote-date-1 {
-  font-size: 0.2rem;
-  grid-column: 2 / span 4;
+  font-size: 0.3rem;
+  grid-column: 3 / span 7;
   grid-row: 2 / span 1;
+  margin-top: 2px;
 }
 
 .p-quote-date-2 {
-  font-size: 0.2rem;
-  grid-column: 7 / span 4;
+  font-size: 0.3rem;
+  grid-column: 8 / span 7;
   grid-row: 2 / span 1;
 }
 
@@ -274,4 +277,12 @@ footer p {
 footer nav {
   display: flex;
   flex-direction: column;
+}
+
+@media (max-width: 600px) {
+  .article-quote-img-2,
+  .p-quote-2,
+  .p-quote-date-2 {
+    display: none;
+  }
 }
